--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
         <link rel= "stylesheet" href="index.css">
     </head>
     <body>
-        <h1>index.html</h1>
+        <div class="container">
+            <h1 class="title">Color Lighten/Darken</h1>
+        </div>
         <script src="index.pack.js"></script>
     </body>
 </htm>
