--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <div class="container">
             <h1 class="title">Color Lighten/Darken</h1>
         </div>
+        <label for="hex">Color (Hex)</label>
         <script src="index.pack.js"></script>
     </body>
 </htm>
