--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             <h1 class="title">Color Lighten/Darken</h1>
         </div>
         <label for="hex">Color (Hex)</label>
+        <input type="text" name="hex" id="hexInput" placeholder="#000000"/>
         <script src="index.pack.js"></script>
     </body>
 </htm>
