--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         </div>
         <label for="hex">Color (Hex)</label>
         <input type="text" name="hex" id="hexInput" placeholder="#000000"/>
+
+        <label for="slider" id="sliderText">0%</label>
+        <input type="range" min="0" max="100" value="0" class="slider" id="slider" name="slider"></input>
         <script src="index.pack.js"></script>
     </body>
 </htm>
