--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
         <label for="slider" id="sliderText">0%</label>
         <input type="range" min="0" max="100" value="0" class="slider" id="slider" name="slider"></input>
+        <p> Input Color </p>
+        <div id="inputColor" class="box"></div>
         <script src="index.pack.js"></script>
     </body>
 </htm>
