Altered color  Added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <input type="range" min="0" max="100" value="0" class="slider" id="slider" name="slider"></input>
         <p> Input Color </p>
         <div id="inputColor" class="box"></div>
+        <p>Altered Color</p>
+        <div id="alteredColor" class="box"></div>
         <script src="index.pack.js"></script>
     </body>
 </htm>
