--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <htm>
     <head>
         <link rel= "stylesheet" href="index.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat"
+        rel="stylesheet"/>
     </head>
     <body>
         <div class="container">
